# HippoRAG-patched

./: README.md  main.py  main_azure.py  main_dpr.py  pyproject.toml
configs/: openrouter.sample.yaml
src/hipporag/: HippoRAG.py  StandardRAG.py  __init__.py  rerank.py
src/hipporag/embedding_model/: OpenAI.py  __init__.py
src/hipporag/information_extraction/: openie_openai.py
src/hipporag/llm/: __init__.py  openai_gpt.py
src/hipporag/utils/: config_utils.py  qa_utils.py
